# Bokrah-Ai-Assistant

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  langgraph.json  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  cancel_appointment.py  create_appointment.py  primary.py  reader.py  update_appointment.py
graph/: __init__.py  build_graph.py  routes.py
models/: __init__.py  appointment.py  common.py  graph_state.py
nodes/: __init__.py  dialog_utils.py  entry_nodes.py  errors.py
prompts/: __init__.py  cancel_prompt.py  create_prompt.py  primary_prompt.py  reader_prompt.py  update_prompt.py
tools/: __init__.py  api_client.py  appointment_tools.py  complete_or_escalate.py  lookup_tools.py  primary_assistant_tools.py
utils/: Assistant.py  __init__.py  auth.py  config.py  dialog_reducer.py
