[project]
name = "bokrah-ai-assistant"
version = "0.1.0"
description = "An Ai Assistant dedicated for Bokrah Appointment Managment System"
authors = [{ name = "Jad Atout", email = "JadAtout.2003@gmial.com" }]
requires-python = ">=3.9"

dependencies = [
    # LangChain ecosystem
    "langchain-core~=0.3.60",
    "langchain-openai~=0.3.17",
    "langchain-community",
    "langchain~=0.3.25",


    # Env + requests + typing
    "python-dotenv~=1.1.0",
    "requests~=2.32.3",
    "typing_extensions~=4.13.2",



    # Validation & Graph
    "pydantic~=2.11.4",
    "langgraph-cli",
    "langgraph~=0.4.5",
    "dotenv~=0.9.9",
    "langserve~=0.3.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["graph", "nodes", "models", "agents", "prompts"]
